--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,46 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.5</version>
+				<executions>
+					<execution>
+						<id>my-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>my-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>my-prepare-integration-test-agent</id>
+						<goals>
+						   <goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+					   <id>my-generate-integration-test-report</id>
+					   <goals>
+						   <goal>report-integration</goal>
+					   </goals>
+				   </execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+					<sourceEncoding>UTF-8</sourceEncoding>
+				</configuration>
+			</plugin>
+			</plugins>
 	</build>
 </project>
