--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: linux
 dist: trusty
 group: edge
 language: java
@@ -8,5 +9,5 @@ after_success:
 cache:
   directories:
     - $HOME/.m2 
-  script:
-    - mvn clean install
+script:
+  - mvn clean install
